# teamspeak-observer.rs

./: Cargo.toml
.github/workflows/: main.yml
src/: datastructures.rs  main.rs  socketlib.rs
