[package]
name = "teamspeak-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
env_logger = "0.9.0"
log = { version = "0.4.17", features = ["release_max_level_debug", "max_level_trace"] }
serde = "1.0.138"
serde_derive = "1.0.138"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
teloxide = { version = "0.9", default-features = false, features = ["rustls"] }
teloxide-macros = "0.4"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
chrono = "0.4.19"