[package]
name = "teamspeak-observer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = "3.2.8"
country-emoji = "0.2.0"
env_logger = "0.9.0"
log = { version = "0.4.17", features = ["release_max_level_debug", "max_level_debug"] }
serde = "1.0.138"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0.138"
teloxide = { version = "0.9", default-features = false, features = ["rustls"] }
teloxide-macros = "0.4"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
